# reuse

./: README.md  main.py
dbt-base/: README.md  pyproject.toml
dbt-base/project-{stub}/: .user.yml  profiles.yml
dbt-base/project-{stub}/scripts/: cli.py  extract.py  models.py  templates.py
dbt-base/project-{stub}/seeder_project_tmpl/.cleanup/: graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
dbt-base/project-{stub}/seeder_project_tmpl/.cleanup/compiled/seeder_project_tmpl/: assessments_scores.sql
dbt-base/project-{stub}/seeder_project_tmpl/.cleanup/run/seeder_project_tmpl/: assessments_scores.sql
dbt-base/project-{stub}/seeder_project_tmpl/macros/: client.sql  common.sql
dbt-base/project-{stub}/seeder_project_tmpl/models/gold/: assessments_scores.sql  dbt_project.yml  per_pupil_spend.sql  properties.yml
dbt-base/project-{stub}/seeder_project_tmpl/models/silver/: academic_graduation_rate.sql  academic_indicators_ela.sql  assessments_sbac.sql  dbt_project.yml  properties.yml
dbt-base/project-{stub}/seeder_project_tmpl/models/staging/: academic_graduation_rate.sql  academic_indicators_ela.sql  assessments_sbac.sql  dbt_project.yml  properties.yml
dbt-base/project-{stub}/seeder_project_tmpl/tests/: test_assert_ela_met_and_above_composite.sql
nb/src/: definitions_workflow.ipynb  sync.ipynb
nb/src/api/: main.py
