[tool.poetry]
name = "dbt-base-api"
version = "0.1.0"
description = "Simplified dbt runner through a stacked FastAPI service for tracing, centralized-logging, and frictionless deployment"
authors = ["Data Platforms <data-engineering@66degrees.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
dbt-core = "^1.7.1"
dbt-bigquery = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
